--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ img {
   justify-content: space-around;
   align-items: center;
   height: 30%;
+  color: var(--Navy-200);
+  opacity: 0.5;
 }
 
 .card__links button {
@@ -184,13 +186,67 @@ img {
 
   .grid {
     place-content: center;
-    grid-template-columns: repeat(auto-fill, 240px);
-    /* grid-auto-rows: 180px; */
-    max-width: unset;
+    grid-template-columns: repeat(auto-fill, 220px);
+    max-width: 1200px;
+  }
+
+  .card {
+    height: 230px;
+    padding-top: 19%;
   }
 
   .card--profile {
-    height: auto;
     grid-row: 1 / 3;
+    height: auto;
+    padding-top: 0;
+  }
+
+  .card__header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.8em;
+    height: 65%;
+    padding: 1.8em 1.6em;
+  }
+
+  .card__header > div:first-child {
+    width: 75px;
+    height: 75px;
+  }
+
+  .card__intro p:last-child {
+    font-size: 3.4rem;
+  }
+
+  .card__links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    height: 35%;
+    padding: 1.4em;
+  }
+
+  .card__layout {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    padding: 1.8em 1.4em;
+    background-color: var(--Navy-900);
+    border-radius: 10px;
+  }
+
+  .card__description {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .card__description p:first-child {
+    margin-bottom: 0.1em;
+    font-size: 5rem;
   }
 }
